--- a/sub/mypage_mileage.html
+++ b/sub/mypage_mileage.html
@@ -38,7 +38,7 @@
 
 <header id="new_hd" class="hd_wrap">
   <div class="hd_area">
-      <div class="hd_con">
+      <div class="hd_con6">
           <div class="hd_size">
               <div class="logo">
                   <a href="#">
