--- a/sub/sub08_view.html
+++ b/sub/sub08_view.html
@@ -45,7 +45,7 @@
 
 <header id="new_hd" class="hd_wrap">
     <div class="hd_area">
-        <div class="hd_con">
+        <div class="hd_con5">
             <div class="hd_size">
                 <div class="logo">
                     <a href="#">
