--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
           <li><a href="#">소통</a></li>
   <li><a href="sub/sub01_list.html">모꼬지</a></li>
   <li><a href="sub/sub02_list.html">한마당</a></li>
+  <li><a href="sub/today_talk_list.html">오늘의 톡</a></li>
       </ul>
   </li>
   <li id="port" class="nav_box_ob">
@@ -187,6 +188,7 @@
       <ul class="sub_nav_box">
           <li><a href="#">나눔</a></li>
   <li><a href="sub/sub03_list.html">소식나눔</a></li>
+  <li><a href="sub/sub03_01_list.html">소식공유</a></li>
   <li><a href="sub/sub04_list.html">희망나눔</a></li>
       </ul>
   </li>
@@ -195,6 +197,7 @@
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub/sub05_list.html">학생토론</a></li>
+  <li><a href="sub/sub05_01_list.html">학생토의</a></li>
   <li><a href="sub/sub06_list.html">학생설문</a></li>
 </ul>
   </li>
