--- a/index.html
+++ b/index.html
@@ -1489,12 +1489,12 @@ $(function () {
     });
 
     $(".nav_box_ob").mouseover(function () {
-        $("#new_hd").addClass("hd_active");
+        $("#new_hd").addClass("hd_active6");
         $(".sub_nav_box").stop().slideDown(200);
     });
 
     $("#new_hd").mouseleave(function () {
-        $("#new_hd").removeClass("hd_active");
+        $("#new_hd").removeClass("hd_active6");
         $(".sub_nav_box").stop().slideUp(100);
     });
 
