--- a/sub/sub04_list.html
+++ b/sub/sub04_list.html
@@ -38,7 +38,7 @@
 
 <header id="new_hd" class="hd_wrap">
 	<div class="hd_area">
-		<div class="hd_con3">
+		<div class="hd_con">
 			<div class="hd_size">
 				<div class="logo">
 					<a href="../index.html">
@@ -236,7 +236,7 @@
 					<ul>
 						<li><img src="../images/common/home_icon.svg" alt="서브페이지 홈 아이콘 이미지"/></li>
 						<li>나눔</li>
-						<li>소식나눔</li>
+						<li>희망나눔</li>
 					</ul>
 				</div>
 				<div class="sub03_banner_title">
@@ -245,6 +245,8 @@
 				<div class="sub_page_link4">
 					<ul>
 						<li ><a href="sub03_list.html">소식나눔</a></li>
+						<li>/</li>
+						<li ><a href="sub03_01_list.html">소식공유</a></li>
 						<li>/</li>
 						<li class="on2"><a href="sub04_list.html">희망나눔</a></li>
 					</ul>
