--- a/sub/sub03_list.html
+++ b/sub/sub03_list.html
@@ -21,6 +21,7 @@
   <!-- 서브 css -->		
   <link rel="stylesheet" href="../css/sub.css"/>
 
+
   <!-- jquery cdn -->
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/jquery-1.12.4.min.js"></script>
@@ -56,6 +57,7 @@
           <li><a href="#">소통</a></li>
   <li><a href="sub01_list.html">모꼬지</a></li>
   <li><a href="sub02_list.html">한마당</a></li>
+  <li><a href="today_talk_list.html">오늘의 톡</a></li>
       </ul>
   </li>
   <li id="port" class="nav_box_ob">
@@ -63,6 +65,7 @@
       <ul class="sub_nav_box">
           <li><a href="#">나눔</a></li>
   <li><a href="sub03_list.html">소식나눔</a></li>
+<li><a href="sub03_01_list.html">소식공유</a></li>
   <li><a href="sub04_list.html">희망나눔</a></li>
       </ul>
   </li>
@@ -71,6 +74,7 @@
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub05_list.html">학생토론</a></li>
+  <li><a href="sub05_01_list.html">학생토의</a></li>
   <li><a href="sub06_list.html">학생설문</a></li>
 </ul>
   </li>
@@ -182,6 +186,7 @@
 					<ul class="m_sub_nav">
 						<li><a href="#">모꼬지</a></li>
 						<li><a href="#">한마당</a></li>
+						<li><a href="#">오늘의 톡</a></li>
 					</ul>
 				</li>
 
@@ -189,7 +194,8 @@
 				<li class="m_nav_ob">
 					<a href="#">나눔 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">소식나눔</a></li>
+						<li><a href="#">소식공유</a></li>
 						<li><a href="#">희망나눔</a></li>
 					</ul>
 				</li>
@@ -197,21 +203,22 @@
 				<li class="m_nav_ob">
 					<a href="#">토론 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">학생토론</a></li>
+						<li><a href="#">학생토의</a></li>
 						<li><a href="#">학생설문</a></li>
 					</ul>
 				</li>
 				<li class="m_nav_ob">
 					<a href="#">제안 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">학생제안</a></li>
 						<li><a href="#">제안결과</a></li>
 					</ul>
 				</li>
 				<li class="m_nav_ob">
 					<a href="#">들락날락소개 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">소개</a></li>
 						<li><a href="#">공지사항</a></li>
 						<li><a href="#">질의응답</a></li>
 					</ul>
@@ -243,6 +250,8 @@
 				<div class="sub_page_link3">
 					<ul>
 						<li class="on2"><a href="sub03_list.html">소식나눔</a></li>
+						<li>/</li>
+						<li ><a href="sub03_01_list.html">소식공유</a></li>
 						<li>/</li>
 						<li><a href="sub04_list.html">희망나눔</a></li>
 					</ul>
@@ -459,8 +468,29 @@
 			</div>
 		</div>
 	</div>
+	<div class="btn_box">
+			<button class="btn_top_1" title="위로가기" style="display: inline-block;"><i class="xi-angle-up"></i><div class="btn_txt">TOP</div></button>
+		</div>
 </div>
 <!-- footer End. -->
+
+
+<!-- 탑버튼 스크립트 영역 -->
+<script>
+$( document ).ready( function() {
+  $( window ).scroll( function() {
+    if ( $( this ).scrollTop() > 200 ) {
+      $( '.btn_top_1' ).fadeIn();
+    } else {
+      $( '.btn_top_1' ).fadeOut();
+    }
+  });
+  $( '.btn_top_1' ).click( function() {
+    $( 'html, body' ).animate( { scrollTop : 0 }, 1000 );
+    return false;
+  });
+});
+</script>
 
 
 <!-- 헤더 스크립트 영역 -->
