--- a/sub/introduce.html
+++ b/sub/introduce.html
@@ -39,7 +39,7 @@
 		<div class="hd_con6">
 			<div class="hd_size">
 				<div class="logo">
-					<a href="#">
+					<a href="../index.html">
 						<span></span>
 					</a>
 				</div>
@@ -51,31 +51,34 @@
 					<div class="menu_nav">
 <ul class="nav_box">
 <li class="nav_box_ob">
-      <a href="#">소통</a>
+      <a href="sub01_list.html">소통</a>
       <ul class="sub_nav_box">
           <li><a href="#">소통</a></li>
   <li><a href="sub01_list.html">모꼬지</a></li>
   <li><a href="sub02_list.html">한마당</a></li>
+  <li><a href="today_talk_list.html">오늘의 톡</a></li>
       </ul>
   </li>
   <li id="port" class="nav_box_ob">
-      <a href="#">나눔</a>
+      <a href="sub03_list.html">나눔</a>
       <ul class="sub_nav_box">
           <li><a href="#">나눔</a></li>
   <li><a href="sub03_list.html">소식나눔</a></li>
+<li><a href="sub03_01_list.html">소식공유</a></li>
   <li><a href="sub04_list.html">희망나눔</a></li>
       </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">토론</a>
+      <a href="sub05_list.html">토론</a>
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub05_list.html">학생토론</a></li>
+  <li><a href="#">학생토의</a></li>
   <li><a href="sub06_list.html">학생설문</a></li>
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">제안</a>
+      <a href="sub07_list.html">제안</a>
       <ul class="sub_nav_box">
           <li><a href="#">제안</a></li>
   <li><a href="sub07_list.html">학생제안</a></li>
@@ -83,7 +86,7 @@
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">들락날락소개</a>
+      <a href="introduce.html">들락날락소개</a>
       <ul class="sub_nav_box">
           <li><a href="#">들락날락소개</a></li>
   <li><a href="introduce.html">소개</a></li>
@@ -182,6 +185,7 @@
 					<ul class="m_sub_nav">
 						<li><a href="#">모꼬지</a></li>
 						<li><a href="#">한마당</a></li>
+						<li><a href="#">오늘의 톡</a></li>
 					</ul>
 				</li>
 
@@ -189,7 +193,8 @@
 				<li class="m_nav_ob">
 					<a href="#">나눔 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">소식나눔</a></li>
+						<li><a href="#">소식공유</a></li>
 						<li><a href="#">희망나눔</a></li>
 					</ul>
 				</li>
@@ -197,21 +202,22 @@
 				<li class="m_nav_ob">
 					<a href="#">토론 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">학생토론</a></li>
+						<li><a href="#">학생토의</a></li>
 						<li><a href="#">학생설문</a></li>
 					</ul>
 				</li>
 				<li class="m_nav_ob">
 					<a href="#">제안 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">학생제안</a></li>
 						<li><a href="#">제안결과</a></li>
 					</ul>
 				</li>
 				<li class="m_nav_ob">
 					<a href="#">들락날락소개 <span></span></a>
 					<ul class="m_sub_nav">
-						<li><a href="#">모꼬지</a></li>
+						<li><a href="#">소개</a></li>
 						<li><a href="#">공지사항</a></li>
 						<li><a href="#">질의응답</a></li>
 					</ul>
