--- a/sub/sub01_view.html
+++ b/sub/sub01_view.html
@@ -60,7 +60,7 @@
 					<div class="menu_nav">
 <ul class="nav_box">
 <li class="nav_box_ob">
-      <a href="#">소통</a>
+      <a href="sub01_list.html">소통</a>
       <ul class="sub_nav_box">
           <li><a href="#">소통</a></li>
   <li><a href="sub01_list.html">모꼬지</a></li>
@@ -69,7 +69,7 @@
       </ul>
   </li>
   <li id="port" class="nav_box_ob">
-      <a href="#">나눔</a>
+      <a href="sub03_list.html">나눔</a>
       <ul class="sub_nav_box">
           <li><a href="#">나눔</a></li>
   <li><a href="sub03_list.html">소식나눔</a></li>
@@ -78,7 +78,7 @@
       </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">토론</a>
+      <a href="sub05_list.html">토론</a>
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub05_list.html">학생토론</a></li>
@@ -87,7 +87,7 @@
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">제안</a>
+      <a href="sub07_list.html">제안</a>
       <ul class="sub_nav_box">
           <li><a href="#">제안</a></li>
   <li><a href="sub07_list.html">학생제안</a></li>
@@ -95,7 +95,7 @@
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">들락날락소개</a>
+      <a href="introduce.html">들락날락소개</a>
       <ul class="sub_nav_box">
           <li><a href="#">들락날락소개</a></li>
   <li><a href="introduce.html">소개</a></li>
