--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <header id="new_hd" class="hd_wrap">
   <div class="hd_area">
-      <div class="hd_con">
+      <div class="hd_con1">
           <div class="hd_size">
               <div class="logo">
                   <a href="#">
@@ -175,7 +175,7 @@
                   <div class="menu_nav">
 <ul class="nav_box">
 <li class="nav_box_ob">
-      <a href="#">소통</a>
+      <a href="sub/sub01_list.html">소통</a>
       <ul class="sub_nav_box">
           <li><a href="#">소통</a></li>
   <li><a href="sub/sub01_list.html">모꼬지</a></li>
@@ -184,7 +184,7 @@
       </ul>
   </li>
   <li id="port" class="nav_box_ob">
-      <a href="#">나눔</a>
+      <a href="sub/sub03_list.html">나눔</a>
       <ul class="sub_nav_box">
           <li><a href="#">나눔</a></li>
   <li><a href="sub/sub03_list.html">소식나눔</a></li>
@@ -193,7 +193,7 @@
       </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">토론</a>
+      <a href="sub/sub05_list.html">토론</a>
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub/sub05_list.html">학생토론</a></li>
@@ -202,7 +202,7 @@
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">제안</a>
+      <a href="sub/sub07_list.html">제안</a>
       <ul class="sub_nav_box">
           <li><a href="#">제안</a></li>
   <li><a href="sub/sub07_list.html">학생제안</a></li>
@@ -210,7 +210,7 @@
 </ul>
   </li>
 <li id="port" class="nav_box_ob">
-      <a href="#">들락날락소개</a>
+      <a href="sub/introduce.html">들락날락소개</a>
       <ul class="sub_nav_box">
           <li><a href="#">들락날락소개</a></li>
   <li><a href="sub/introduce.html">소개</a></li>
