--- a/index.html
+++ b/index.html
@@ -1449,8 +1449,29 @@
 			</div>
 		</div>
 	</div>
+<div class="btn_box">
+			<button class="btn_top_1" title="위로가기" style="display: inline-block;"><i class="xi-angle-up"></i><div class="btn_txt">TOP</div></button>
+		</div>
 </div>
 <!-- footer End. -->
+
+
+<!-- 탑버튼 스크립트 영역 -->
+<script>
+$( document ).ready( function() {
+  $( window ).scroll( function() {
+    if ( $( this ).scrollTop() > 200 ) {
+      $( '.btn_top_1' ).fadeIn();
+    } else {
+      $( '.btn_top_1' ).fadeOut();
+    }
+  });
+  $( '.btn_top_1' ).click( function() {
+    $( 'html, body' ).animate( { scrollTop : 0 }, 1000 );
+    return false;
+  });
+});
+</script>
 
 
 <!-- 헤더 스크립트 영역 -->
