--- a/sub/sub03_01_list.html
+++ b/sub/sub03_01_list.html
@@ -74,7 +74,7 @@
       <ul class="sub_nav_box">
           <li><a href="#">토론</a></li>
   <li><a href="sub05_list.html">학생토론</a></li>
-  <li><a href="#">학생토의</a></li>
+  <li><a href="sub05_01_list.html">학생토의</a></li>
   <li><a href="sub06_list.html">학생설문</a></li>
 </ul>
   </li>
